# ml_template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  ml_template_notebook.ipynb  pyproject.toml  reqs_colab.txt  requirements.txt  struct.txt  traintest_colab.ipynb
.github/workflows/: default.yml
config/: wb_unet.yaml  wb_unet_neptune.yaml
config/data/: waterbodies.yaml
config/model/: unet.yaml
ml_template/: train_test.py
ml_template/conf/: main.yaml
ml_template/conf/dataset/: snt12_era5_srtm.yaml  test.yaml
ml_template/conf/model/: rf.yaml
ml_template/conf/wandb_init/: defaults.yaml
ml_template/datamodules/: base.py
ml_template/models/: base.py  rf.py
src/: lightningcli.py  train_test.py  traintest.py  utils.py
src/conf/: main.yaml
src/conf/datamodule/: EuroSAT_RGB_Samples.yaml  eurosat_rgb.yaml  template.yaml  waterbodies.yaml
src/conf/dataset/: eurosat_ms.yaml  eurosat_rgb.yaml  template.yaml  test.yaml  waterbodies.yaml
src/conf/logger/: wandb.yaml
src/conf/model/: base.yaml  cnn.yaml  resnet.yaml  resnet13chan.yaml  rf.yaml  templatemodel.yaml  unet.yaml  (+3 more)
src/datamodules/: EuroSAT_RGB_Samples.py  EuroSAT_RGB_Samples_utils.py  base.py  eurosat.py  eurosat_rgb.py  eurosat_rgb_utils.py  eurosat_utils.py  template.py  templatedata.py  test.py  waterbodies.py  waterbodies_utils.py
src/models/: base.py  base_lci.py  cnn.py  resnet.py  rf.py  templatemodel.py  unet.py  vit.py  vitmae.py  volo.py
tests/: dataset_tester.py  test_cnn.py  test_data_transform.py  test_eurosat.py  test_nets.py  test_waterbodies_utils.py  todo.txt
(+1 files in other folders)
