[tool.poetry]
name = "ml-template"
version = "0.1.0"
description = "template for ml projects"
authors = ["purnelldj <davejpurnell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
wandb = "^0.16.3"
hydra-core = "^1.3.2"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
